Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-31121

TextArea: when selectByMouse is false, the text area moves with the mouse

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.1.0 RC1
    • 5.1.0 Beta 1
    • Quick: Controls 1
    • None
    • 72232a9ba0fa0ac328d60f1a1c8965cb303f4a48

      Test case:

      import QtQuick 2.1
      import QtQuick.Controls 1.0
      
      Rectangle {
          width: 360
          height: 360
          TextArea {
              anchors.centerIn: parent
              text: "Hello World"
              selectByMouse: false
          }
      }
      

      To reproduce - press, hold and move the mouse inside the TextArea
      => the problem is the TextArea content moves with the mouse. It shouldn't.

        For Gerrit Dashboard: QTBUG-31121
        # Subject Branch Project Status CR V

            bachewii Jens
            carochao Caroline Chao (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes